<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activityBackground"
    tools:context="com.example.android.quizapp.ResultActivity">

    <!-- Results Container -->
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Result headline -->
        <TextView
            android:id="@+id/result_headline_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/result"
            android:textSize="@dimen/headline" />

        <!-- Part 1 of correct answers string -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/result_part1"
            android:textSize="@dimen/display_text" />

        <!-- Part 2 of correct answers string -->
        <TextView
            android:id="@+id/final_result_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="# out of #"
            android:textSize="@dimen/display_text" />

        <!-- Part 3 of correct answers string -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/result_part3"
            android:textSize="@dimen/display_text" />

        <!-- Score headline -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/score_text"
            android:textSize="@dimen/headline" />

        <!-- Final score -->
        <TextView
            android:id="@+id/final_score_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="1231"
            android:textSize="@dimen/display_text" />


    </LinearLayout>

    <!-- Button Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <!-- Retry button -->
        <Button
            android:id="@+id/retry_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/viewBackground"
            android:text="@string/retry" />

        <!-- Menu button -->
        <Button
            android:background="@color/viewBackground"
            android:id="@+id/menu_button_resultscreen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/menu" />

    </LinearLayout>
</LinearLayout>
